<resources>
    <string name="app_name">Smart Chat</string>
    <string name="send">Отправить</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="ok">OK</string>
    <string name="download">Скачать</string>
    <string name="copy">Копировать</string>
    <string name="share">Поделиться</string>
    <string name="quote">Ответить</string>
    <string name="message">Сообщение</string>
    <string name="attach">Прикрепить</string>
    <string name="detach">Открепить</string>
    <string name="outgoing_status">Статус отправки</string>
    <string name="connection_error">Ошибка соединения</string>
    <string name="retry">Повторить</string>
    <string name="refreshing">Обновление</string>
    <string name="image">Изображение</string>
    <string name="file_open_error">Не удалось открыть файл</string>
    <string name="typing_users_s">Печатает: %s</string>
    <string name="editing">Редактирование</string>
    <string name="waiting_for_network">Ожидание сети…</string>
    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>
    <string name="files">Файлы</string>
    <string name="edited">Изменено</string>
    <string name="create_chat">Создать чат</string>
    <string name="create_group">Создать группу</string>
    <string name="new_group">Новая группа</string>
    <string name="no_connection">Нет подключения к интернету</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="profile">Профиль</string>
    <string name="profile_error">Ошибка при загрузке профиля</string>
    <string name="search">Поиск</string>
    <string name="photo">Фото</string>
    <string name="upload_photo">Загрузить фотографию</string>
    <string name="upload_photo_error">Ошибка при загрузке фотографии</string>
    <string name="group_name">Название группы</string>
    <string name="member_count_d">Список участников: %d</string>
    <string name="d_members">%d участников</string>
    <string name="clear">Очистить</string>
    <string name="close">Закрыть</string>
    <string name="close_chats">Закрыть чаты</string>
    <string name="pin">Закрепить</string>
    <string name="unpin">Открепить</string>
    <string name="pin_error">Произошла ошибка при закреплении чата</string>
    <string name="unpin_error">Произошла ошибка при откреплении чата</string>
    <string name="archive">В архив</string>
    <string name="archive_messages">Архив чатов</string>
    <string name="favorite_messages">Избранное</string>
    <string name="unarchive">Разархивировать</string>
    <string name="archive_error">Произошла ошибка при архивации чата</string>
    <string name="unarchive_error">Произошла ошибка при разархивации чата</string>
    <string name="add_members">Добавить участников</string>
    <string name="select_members">Выберите участников</string>
    <string name="add">Добавить</string>
    <string name="leave_chat">Покинуть чат</string>
    <string name="leave_chat_error">Ошибка при попытке покинуть чат</string>
    <string name="archive_chat_error">Ошибка при попытке архивировать чат</string>
    <string name="leave_chat_dialog_message">Вы действительно хотите покинуть этот чат?</string>
    <string name="archive_chat_dialog_message">Вы действительно хотите архивировать этот чат?</string>
    <string name="unarchive_chat_dialog_message">Вы действительно хотите разархивировать этот чат?</string>
    <string name="members">Участники</string>
    <string name="media">Медиа</string>
    <string name="links">Ссылки</string>
    <string name="documents">Документы</string>
    <string name="creator">Создатель</string>
    <string name="online">В сети</string>
    <string name="offline">Не в сети</string>
    <string name="base_error_message">Не удалось загрузить информацию</string>
    <string name="delete_member">Удалить из чата</string>
    <string name="delete_member_error">Ошибка при исключении пользователя из чата</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="to_favorites">Сохранить в избранное</string>
    <string name="chats">Чаты</string>
    <string name="contacts">Контакты</string>
    <string name="partner_selection">Выбор партнера</string>
    <string name="user_missing_message">Выбранного пользователя не существует</string>
    <string name="username_missing_message">Пожалуйста, укажите Ваше имя, чтобы пользоваться чатами</string>
    <string name="name">Имя</string>
    <string name="continue_text">Продолжить</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
</resources>
