<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_back_purple_24" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/chat_info_layout"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="72dp">

                <TextView
                    android:id="@+id/tv_title"
                    style="?attr/textAppearanceHeadline6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:layout_constraintBottom_toTopOf="@id/tv_subtitle"
                    app:layout_constraintEnd_toStartOf="@id/iv_chat_avatar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="Smart Chat" />

                <ImageView
                    android:id="@+id/iv_partner_icon"
                    android:layout_width="12sp"
                    android:layout_height="12sp"
                    android:layout_marginEnd="4dp"
                    android:importantForAccessibility="no"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/tv_subtitle"
                    app:layout_constraintEnd_toStartOf="@id/tv_subtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_subtitle"
                    tools:background="@color/gray" />

                <TextView
                    android:id="@+id/tv_subtitle"
                    style="@style/Caption1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/razzmatazz"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_chat_avatar"
                    app:layout_constraintStart_toEndOf="@id/iv_partner_icon"
                    app:layout_constraintTop_toBottomOf="@id/tv_title"
                    tools:text="158579 ООО Мясокомбинат" />

                <ImageView
                    android:id="@+id/iv_chat_avatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="14dp"
                    android:background="?attr/actionBarItemBackground"
                    android:contentDescription="@null"
                    android:padding="2dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/group_avatar_placeholder" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_layout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            tools:listitem="@layout/item_chat_msg_outgoing" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_mentions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            tools:itemCount="4"
            tools:listitem="@layout/item_mention" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <FrameLayout
        android:id="@+id/btn_scroll_down"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_above="@id/layout_input"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp">

        <View
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|end"
            android:background="@drawable/ic_scroll_down_40" />

        <TextView
            android:id="@+id/tv_unread_message_count"
            style="@style/Caption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_doc_progress"
            android:paddingHorizontal="8dp"
            android:paddingVertical="1dp"
            android:textColor="@color/white"
            tools:text="25" />

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_quoted_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:paddingStart="56dp"
            android:paddingTop="8dp"
            android:paddingEnd="48dp"
            android:paddingBottom="4dp"
            android:visibility="gone"
            tools:visibility="visible">

            <View
                android:id="@+id/view_quot"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:background="@color/purple_heart"
                android:duplicateParentState="true"
                app:layout_constraintBottom_toBottomOf="@id/tv_quoted_message"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_quoted_person" />

            <TextView
                android:id="@+id/tv_quoted_person"
                style="@style/Caption1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:lines="1"
                android:textColor="@color/purple_heart"
                app:layout_constraintEnd_toStartOf="@id/btn_quoted_close"
                app:layout_constraintStart_toEndOf="@id/view_quot"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Андрей" />

            <TextView
                android:id="@+id/tv_quoted_message"
                style="@style/Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawablePadding="4dp"
                android:ellipsize="end"
                android:lines="1"
                app:layout_constraintEnd_toStartOf="@id/btn_quoted_close"
                app:layout_constraintStart_toEndOf="@id/view_quot"
                app:layout_constraintTop_toBottomOf="@id/tv_quoted_person"
                tools:text="Привет! Как дела?" />

            <ImageButton
                android:id="@+id/btn_quoted_close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/cancel"
                android:src="@drawable/ic_baseline_close_24"
                app:layout_constraintBottom_toBottomOf="@id/tv_quoted_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_quoted_person" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_editing_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_quoted_message"
            android:paddingStart="56dp"
            android:paddingTop="8dp"
            android:paddingEnd="48dp"
            android:paddingBottom="4dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/label_editing"
                style="@style/Caption1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:lines="1"
                android:text="@string/editing"
                android:textColor="@color/purple_heart"
                app:layout_constraintEnd_toStartOf="@id/btn_editing_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_editing_message"
                style="@style/Body2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:ellipsize="end"
                android:lines="1"
                app:layout_constraintEnd_toStartOf="@id/btn_editing_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_editing"
                tools:text="Привет! Как дела?" />

            <ImageButton
                android:id="@+id/btn_editing_close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/cancel"
                android:gravity="center"
                android:src="@drawable/ic_baseline_close_24"
                app:layout_constraintBottom_toBottomOf="@id/tv_editing_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/label_editing" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/view_attachment"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_below="@id/view_editing_message"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/bg_attachment"
            android:minWidth="110dp"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/iv_attachment_photo"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_photo_attachment"
                android:contentDescription="@null"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progress_bar_photo"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_photo_progress"
                android:padding="2dp"
                android:theme="@style/ProgressDialogTheme"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/view_file_attachment"
                android:layout_width="wrap_content"
                android:layout_height="108dp"
                android:layout_gravity="center"
                android:minWidth="108dp"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/iv_file"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_doc_40" />

                <ProgressBar
                    android:id="@+id/progress_bar_file"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_doc_progress"
                    android:padding="4dp"
                    android:theme="@style/ProgressDialogTheme"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_file_name"
                    style="@style/Body3"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:ellipsize="end"
                    android:gravity="bottom"
                    android:lines="1"
                    android:maxWidth="140dp"
                    android:minWidth="92dp"
                    tools:text="File_name_1z53cgasd.jpg" />

                <TextView
                    android:id="@+id/tv_file_size"
                    style="@style/Caption1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:ellipsize="end"
                    android:gravity="bottom"
                    android:lines="1"
                    android:maxWidth="140dp"
                    android:minWidth="92dp"
                    android:textColor="@color/gray"
                    tools:text="48 Kb" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_detach"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:background="@null"
                android:contentDescription="@string/detach"
                android:src="@drawable/ic_delete_24" />

        </FrameLayout>

        <ImageButton
            android:id="@+id/btn_attach"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@id/view_attachment"
            android:layout_margin="4dp"
            android:background="?attr/actionBarItemBackground"
            android:contentDescription="@string/attach"
            android:src="@drawable/ic_attach_24" />

        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_attachment"
            android:layout_marginVertical="4dp"
            android:layout_toStartOf="@id/btn_send"
            android:layout_toEndOf="@id/btn_attach"
            android:background="@null"
            android:hint="@string/message"
            android:maxLines="6"
            android:minHeight="48dp"
            android:paddingHorizontal="16dp"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <ImageButton
            android:id="@+id/btn_send"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@id/view_attachment"
            android:layout_alignParentEnd="true"
            android:layout_margin="4dp"
            android:background="?attr/actionBarItemBackground"
            android:contentDescription="@string/send"
            android:src="@drawable/btn_send" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/view_empty_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_layout"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/connection_error" />

        <Button
            android:id="@+id/btn_empty_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/retry"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>
